src/eleventy/content/_includes/v23.2/sql/select-for-update-limitations.md
By default under `SERIALIZABLE` isolation, locks acquired using `SELECT ... FOR UPDATE` and `SELECT ... FOR SHARE` are implemented as fast, in-memory [unreplicated locks](architecture/transaction-layer.html#unreplicated-locks). If a [lease transfer]({% link "{{ page.version.version }}/architecture/replication-layer.md" %}#epoch-based-leases-table-data) or [range split/merge]({% link "{{ page.version.version }}/architecture/distribution-layer.md" %}#range-merges) occurs on a range held by an unreplicated lock, the lock is dropped. The following behaviors can occur:

- The desired ordering of concurrent accesses to one or more rows of a table expressed by your use of `SELECT ... FOR UPDATE` may not be preserved (that is, a transaction _B_ against some table _T_ that was supposed to wait behind another transaction _A_ operating on _T_ may not wait for transaction _A_).
- The transaction that acquired the (now dropped) unreplicated lock may fail to commit, leading to [transaction retry errors with code `40001`]({% link "{{ page.version.version }}/transaction-retry-error-reference.md" %}) and the [`restart transaction` error message]({% link "{{ page.version.version }}/common-errors.md" %}#restart-transaction).

When running under `SERIALIZABLE` isolation, `SELECT ... FOR UPDATE` and `SELECT ... FOR SHARE` locks should be thought of as best-effort, and should not be relied upon for correctness. Note that serialization is preserved despite this limitation. This limitation is fixed when the `enable_durable_locking_for_serializable` [session setting]({% link "{{ page.version.version }}/session-variables.md" %}#enable-durable-locking-for-serializable) is set to `true`.

{{site.data.alerts.callout_info}}
This limitation does **not** apply to [`READ COMMITTED`]({% link "{{ page.version.version }}/read-committed.md" %}) transactions.
{{site.data.alerts.end}}